--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -10,8 +10,6 @@
             display: flex;
             align-items: center;
             margin: 5px 0px;
-            height: 100%;
-			width: auto;
         }
 
         .navbar__menu {
